--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -395,4 +395,15 @@
         <item name="android:textColor">@color/subtitle_list_text_color</item>
     </style>
 
+    <style name="OrderDetailsTitleStyle">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="OrderDetailsSubtitleStyle">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black_text</item>
+    </style>
+
 </resources>
