--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -68,5 +68,7 @@
     <color name="notification_time_color">#bfbfbf</color>
     
     <color name="empty_login_button_text">#66202020</color>
-    
+
+    <color name="notification_clickable_text_color">#3b528b</color>
+
 </resources>
