--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_list.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_list.xml
@@ -39,4 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
+    <ImageView
+        android:layout_toRightOf="@+id/user_avatar"
+        android:layout_alignParentBottom="true"
+        style="@style/DividerStyleFull" />
 </RelativeLayout>
