--- a/trunk/ddscanner/app/src/main/res/layout/fragmnet_activity_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragmnet_activity_notifications.xml
@@ -1,11 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include layout="@layout/view_no_notifications" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_rc"
-        android:scrollbars="vertical"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+    </data>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#fbfbfb">
+
+        <include
+            android:id="@+id/no_notifs_view"
+            layout="@layout/view_no_notifications"
+            android:visibility="gone" />
+
+        <com.rey.material.widget.ProgressView
+            android:id="@+id/progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:layout_marginTop="50dp"
+            app:pv_autostart="true"
+            app:pv_circular="true"
+            app:pv_progressMode="indeterminate"
+            app:pv_progressStyle="@style/CircularProgress" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activity_rc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:visibility="gone" />
+    </LinearLayout>
+</layout>
