--- a/trunk/ddscanner/app/src/main/res/values/dimens.xml
+++ b/trunk/ddscanner/app/src/main/res/values/dimens.xml
@@ -27,4 +27,7 @@
 
     <dimen name="image_in_divespot_small">75dp</dimen>
     <dimen name="base_block_margin_top">10dp</dimen>
+
+    <dimen name="base_avatar_diameter">36dp</dimen>
+
 </resources>
