--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_list.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_list.xml
@@ -35,6 +35,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:layout_marginTop="10dp"
+            android:layout_marginRight="47dp"
             android:id="@+id/photos_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
