~ peromance of reviews list

--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -71,4 +71,6 @@
 
     <color name="notification_clickable_text_color">#3b528b</color>
 
+    <color name="photos_placeholder">#EFEFEF</color>
+
 </resources>
