--- a/trunk/ddscanner/app/src/main/res/layout/activity_pick_location.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_pick_location.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:auto="http://schemas.android.com/tools"
+    xmlns:auto="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="handlers"
+            type="com.ddscanner.ui.activities.PickLocationActivity" />
+    </data>
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -29,7 +35,9 @@
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:paddingLeft="20dp"
-            android:paddingRight="20dp">
+            android:paddingRight="20dp"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="true">
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_lat"
                 app:layout_widthPercent="50%"
@@ -38,11 +46,14 @@
 
                 <EditText
                     android:id="@+id/latitude"
+                    android:maxLength="10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black_text"
+                    android:lines="1"
                     android:background="@android:color/transparent"
-                    android:hint="@string/latitude" />
+                    android:hint="@string/latitude"
+                    android:inputType="numberDecimal"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -58,8 +69,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black_text"
+                    android:maxLength="10"
+                    android:lines="1"
                     android:background="@android:color/transparent"
-                    android:hint="@string/longitude" />
+                    android:hint="@string/longitude"
+                    android:inputType="numberDecimal"
+                    />
 
             </android.support.design.widget.TextInputLayout>
         </android.support.percent.PercentRelativeLayout>
@@ -68,8 +83,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <fragment
-                android:id="@+id/mapFragment"
+            <com.google.android.gms.maps.MapView
+                android:id="@+id/map_fragment"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
@@ -100,5 +115,7 @@
         android:src="@drawable/ic_acb_check"
         android:scaleType="center"
         app:backgroundTint="@color/orange"
-        android:layout_gravity="bottom|right"/>
+        android:layout_gravity="bottom|right"
+        android:onClick="@{handlers::saveLocationClicked}"/>
 </android.support.design.widget.CoordinatorLayout>
+</layout>
