+ achievemnt getted notification type

--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_and_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_and_text.xml
@@ -12,7 +12,8 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_margin="15dp"
-        android:src="@drawable/review_default_avatar"
+        android:src="@drawable/ic_star_title"
+        android:scaleType="center"
         />
 
     <TextView
