--- a/trunk/ddscanner/app/src/main/res/layout/activity_change_address.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_change_address.xml
@@ -65,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorHint="#b2b2b2"
+                android:maxLength="300"
                 android:hint="@string/address_edit_dc" />
 
             <ImageView
