--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -392,6 +392,7 @@
                                     android:layout_below="@+id/maps"
                                     android:layout_marginBottom="20dp"
                                     android:layout_marginLeft="20dp"
+                                    android:layout_marginRight="15dp"
                                     android:layout_marginTop="13dp"
                                     android:visibility="gone" />
 
@@ -402,6 +403,7 @@
                                     android:layout_below="@+id/maps"
                                     android:layout_marginBottom="20dp"
                                     android:layout_marginLeft="20dp"
+                                    android:layout_marginRight="15dp"
                                     android:layout_marginTop="13dp"
                                     android:visibility="gone" />
 
