--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_and_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_and_text.xml
@@ -16,7 +16,7 @@
         android:scaleType="center"
         />
 
-    <TextView
+    <com.klinker.android.link_builder.LinkConsumableTextView
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:layout_marginRight="18dp"
