--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_list.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_list.xml
@@ -25,7 +25,7 @@
         android:gravity="center_vertical"
         android:orientation="vertical">
 
-        <TextView
+        <com.klinker.android.link_builder.LinkConsumableTextView
             android:id="@+id/notification_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
