--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_single_photo.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_single_photo.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/review_avatar"
         />
 
-    <TextView
+    <com.klinker.android.link_builder.LinkConsumableTextView
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:layout_marginRight="15dp"
