--- a/trunk/ddscanner/app/src/main/res/layout/spinner_level_first_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/spinner_level_first_item.xml
@@ -5,6 +5,7 @@
     android:paddingTop="5dp"
     android:paddingBottom="15dp">
     <TextView
+        android:id="@+id/title"
         android:text="@string/diver_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
