--- a/trunk/ddscanner/app/src/main/res/drawable/splash_bg.xml
+++ b/trunk/ddscanner/app/src/main/res/drawable/splash_bg.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/bg_photo" />
-    </item>
+    <item android:drawable="@drawable/bg_photo"/>
 
     <item
         android:top="100dp">
