--- a/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_photo">
     <TextView
         android:id="@+id/skip"
         android:layout_alignParentRight="true"
@@ -11,20 +12,22 @@
         android:text="@string/skip"
         android:textColor="#c4ceee"
         android:fontFamily="sans-serif-medium"/>
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/splash_logo"
+        android:layout_marginTop="100dp"
+        android:visibility="visible"/>
     <LinearLayout
+        android:layout_below="@+id/logo"
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:gravity="center"
         android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/splash_logo"
-            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/title"
