--- a/trunk/ddscanner/app/src/main/res/layout/fragment_personal_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_personal_notifications.xml
@@ -13,10 +13,26 @@
             android:background="#fbfbfb"
             android:orientation="vertical">
 
-            <include
+            <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/no_notifs_view"
-                layout="@layout/view_no_notifications"
-                android:visibility="gone" />
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_marginTop="100dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_nonotif"/>
+                <TextView
+                    style="@style/ErrorsViewTitleStyle"
+                    android:text="@string/no_notifications"/>
+                <TextView
+                    style="@style/ErrorsViewSubTitleStyle"
+                    android:text="@string/here_will_be_displayed_last_notifications"/>
+            </LinearLayout>
 
             <com.rey.material.widget.ProgressView
                 android:id="@+id/progress_bar"
