--- a/trunk/ddscanner/app/src/main/res/layout/fragmnet_activity_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragmnet_activity_notifications.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
     </data>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -61,4 +65,5 @@
             app:cpd_strokeSize="10dp"
             app:pv_progressStyle="@style/CircularProgress" />
     </RelativeLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </layout>
